Changelog
=========

1.2.2 (unreleased)
------------------

- Nothing changed yet.


1.2.1 (2011-12-22)
------------------

- Added use-macro password_notification_bottom to
  cooptation_password_notification mail, so you can add some paragraphs to the
  mail by adding a cooptation_macros.pt file in your own addon.
  [vincentfretin]


1.2 (2011-09-22)
----------------

- Remove Copy or Move permission for everyone on portal_cooptations,
  this actually remove the copy action from the menu on a cooptation.
  [vincentfretin]

- Added workspace and role hidden fields to cooptation. A new @@addcooptation
  use those new fields. The created user is added to a group for the
  specified role on the workspace.
  Added a "go back" link if workspace field exist.
  [vincentfretin]

- Fixed cooptation edit template for Plone 4.
  [vincentfretin]


1.1 (2010-10-22)
----------------

- Use site name in user creation notification email.

1.0.17 (2009-05-06)
-------------------

- Initial release
